fix: menu alignment and icons rotation

--- a/client/src/components/layouts/rtl-layout.css
+++ b/client/src/components/layouts/rtl-layout.css
@@ -90,7 +90,7 @@ the "not" and "is" selector is used to stop it from affecting other section and 
 external fontawesome link icon
 */
 
-[dir='rtl'] .nav-link > svg,
+[dir='rtl'] .nav-link > .fa-up-right-from-square,
 [dir='rtl'] td a[target='_blank'] > svg {
   transform: rotate(270deg);
 }
@@ -122,7 +122,7 @@ and menu secion
   }
 }
 
-@media (min-width: 767.5px) {
+@media (min-width: 600.5px) {
   [dir='rtl'] .nav-list {
     right: auto;
     left: 0;
